# wasm-spatial-core

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PERFORMANCE.md  PLAN.md  README.md  ROADMAP_V1.md  SECURITY.md  index.html  package.json  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bench/browser/: index.html
bench/comparison/: README.md  bench_comparison.mjs
benches/: spatial_benchmarks.rs
docs/: DEMO_SITE.md  PAGES_SETUP.md  index.html
docs/demo/: index.html
docs/pkg/: README.md  package.json  wasm-spatial-core.d.ts  wasm-spatial-core.js  wasm-spatial-core_bg.wasm  wasm-spatial-core_bg.wasm.d.ts
docs/point-cloud/: index.html
docs/terrain/: index.html
docs/webgl-pointcloud/: index.md
examples/: README.md  bench_coord.rs  gen_test_las.rs  index.html
examples/cesium-demo/: index.html
examples/cesium-workflow/: index.html
examples/data/: china_cities.json
examples/demo/: index.html
examples/point-cloud-cesium/: index.html
examples/point-cloud-demo/: index.html
examples/sample-data/: README.md
examples/terrain-demo/: index.html
examples/webgl-pointcloud/: index.html
examples/worker-demo/: index.html  worker.js
npm/: .npmignore  LICENSE  README.md  index.d.ts  index.ts  package-lock.json  package.json  publish.sh  tsconfig.json
npm/pkg/: wasm_spatial_core.d.ts  wasm_spatial_core.js  wasm_spatial_core_bg.wasm  wasm_spatial_core_bg.wasm.d.ts
pkg/: README.md  package.json  wasm_spatial_core.d.ts  wasm_spatial_core.js  wasm_spatial_core_bg.wasm  wasm_spatial_core_bg.wasm.d.ts
scripts/: build-demo-site.sh  serve_demo.sh
src/: b3dm.rs  cesium_adapter.rs  coordinate.rs  e57.rs  errors.rs  geojson_parser.rs  geojson_streaming.rs  geotiff.rs  gltf_writer.rs  gpx.rs  ifc_reader.rs  lib.rs  obj.rs  octree.rs  ply.rs  pnts.rs  point_cloud.rs  point_cloud_analysis.rs  point_cloud_stream.rs  quantization.rs  spatial_analysis.rs  spatial_index.rs  topojson.rs  topology.rs  utils.rs  vector_tile.rs  wkb_wkt.rs  worker.rs
test-data/large/: sample.laz  sample_laz.laz
tests/: benchmark_suite.rs  error_path_test.rs  external_geotiff_test.rs  integration_test.rs  large_file_e2e.rs  laz_roundtrip_test.rs  memory_audit_test.rs  perf_test.rs  pipeline_integration_test.rs  point_cloud_pipeline.rs  real_data_test.rs  real_geotiff_test.rs  real_laz_test.rs  stress_test.rs  wasm_smoke_test.mjs  web.rs
tests/fixtures/: DATA_MANIFEST.md  bunny_color.ply  generate_synthetic.py  pointcloud_5k.ply  terrain_256x256.tif  terrain_64x64.tif  tile_506_721.laz
