[package]
name = "wasm-spatial-core"
version = "0.1.0"
edition = "2021"
authors = ["Qingxi <qingxi@zhiqiweilai.com>"]
license = "MIT"
description = "A high-performance WebAssembly spatial data processing engine for frontend Web3D/GIS applications"
repository = "https://github.com/reed-soul/wasm-spatial-core"
homepage = "https://github.com/reed-soul/wasm-spatial-core"
keywords = ["wasm", "spatial", "gis", "web3d", "geojson"]
categories = ["wasm", "science::geo", "graphics"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
geojson = "0.24"
geo = "0.29"
proj = { version = "0.28", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Performance",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"        # Optimize for size
lto = true             # Link Time Optimization
codegen-units = 1      # Single codegen unit for max optimization
strip = true           # Strip debug info

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
