[package]
name = "wasm-spatial-core"
version = "0.1.0"
edition = "2021"
authors = ["Qingxi <qingxi@zhiqiweilai.com>"]
license = "MIT"
description = "A high-performance WebAssembly spatial data processing engine for frontend Web3D/GIS applications"
repository = "https://github.com/reed-soul/wasm-spatial-core"
homepage = "https://github.com/reed-soul/wasm-spatial-core"
keywords = ["wasm", "spatial", "gis", "web3d", "geojson"]
categories = ["wasm", "science::geo", "graphics"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "single-thread"]
# Single-thread mode: zero-config, works everywhere, no COOP/COEP needed.
single-thread = []
# Multi-thread mode: extreme performance via Web Workers + SharedArrayBuffer.
# ⚠️ Requires COOP/COEP HTTP headers on the hosting server.
multi-thread = ["rayon", "wasm-bindgen-rayon"]
# Point cloud support (LAS/LAZ parsing + voxel grid decimation)
point-cloud = []

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
geojson = "0.24"
geo = "0.29"
rstar = "0.12"
console_error_panic_hook = { version = "0.1", optional = true }
rayon = { version = "1.10", optional = true }
wasm-bindgen-rayon = { version = "1.2", optional = true }
geojsonvt = "0.1.0"
mvt = "0.13.0"
geozero = { version = "0.15.1", features = ["with-mvt", "with-geojson"] }
earcutr = "0.5.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Performance",
    "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[profile.release]
opt-level = "s"        # Optimize for size
lto = true             # Link Time Optimization
codegen-units = 1      # Single codegen unit for max optimization
strip = true           # Strip debug info

[package.metadata.wasm-pack.profile.release]
# wasm-opt = false for local builds (avoids binary dependency).
# CI release builds should use wasm-opt = ["-Oz"] for max compression.
wasm-opt = false

[[bench]]
name = "spatial_benchmarks"
harness = false
