[package]
name = "wasm-spatial-core"
version = "0.7.0"
edition = "2021"
rust-version = "1.87"
authors = ["Qingxi <qingxi@zhiqiweilai.com>"]
license = "MIT"
description = "A high-performance WebAssembly spatial data processing engine for frontend Web3D/GIS applications"
repository = "https://github.com/reed-soul/wasm-spatial-core"
homepage = "https://github.com/reed-soul/wasm-spatial-core"
keywords = ["wasm", "spatial", "gis", "web3d", "geojson"]
categories = ["wasm", "science::geo", "graphics"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "single-thread"]
# Single-thread mode: zero-config, works everywhere, no COOP/COEP needed.
single-thread = []
# Multi-thread mode: extreme performance via Web Workers + SharedArrayBuffer.
# ⚠️ Requires COOP/COEP HTTP headers on the hosting server.
multi-thread = ["rayon", "wasm-bindgen-rayon"]
# Point cloud support (LAS parsing + voxel grid decimation)
point-cloud = []
# LAZ/COPC compressed point cloud support (optional — adds ~400KB to WASM)
laz-support = ["point-cloud", "dep:laz"]
# E57 format support (optional — architectural/industrial scan format)
e57-support = ["dep:e57"]
# Draco compression support (optional — uses pure-Rust draco-oxide)
draco-support = []
# GeoTIFF terrain support (TIFF parsing + quantized-mesh encoding)
geotiff = []
# Test helpers (exposes internal fields for integration tests — never ship to WASM)
test-helpers = []

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
geojson = "0.24"
geo = "0.29"
rstar = "0.12"
console_error_panic_hook = { version = "0.1", optional = true }
rayon = { version = "1.10", optional = true }
wasm-bindgen-rayon = { version = "1.2", optional = true }
geojsonvt = "0.1.0"
mvt = "0.13.0"
geozero = { version = "0.15.1", features = ["with-mvt", "with-geojson"] }
earcutr = "0.5.0"
prost = "0.14"
laz = { version = "0.12.1", optional = true }
wasm-bindgen-futures = "0.4"
byteorder = "1.5"
e57 = { version = "0.11.12", optional = true }
flate2 = "1.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Performance",
    "Window",
    "Worker",
    "MessageEvent",
    "Blob",
    "Url",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Native-only: Criterion/Rayon do not build for wasm32-unknown-unknown.
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

# Browser `wasm-pack test` harness.
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"

[profile.release]
opt-level = "s"        # Optimize for size
lto = true             # Link Time Optimization
codegen-units = 1      # Single codegen unit for max optimization
strip = true           # Strip debug info

[package.metadata.wasm-pack.profile.release]
# wasm-opt = false for local builds (avoids binary dependency).
# CI release builds should use wasm-opt = ["-Oz"] for max compression.
wasm-opt = false

[patch.crates-io]

[[bench]]
name = "spatial_benchmarks"
harness = false
